--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="content-type" content="text-html; charset=utf-8" />
-    <title>SMO</title>
+    <title>High5software</title>
     <%= stylesheet_link_tag    "application","datepicker", :media => "all" %>
     <%= stylesheet_link_tag 'gmaps4rails', "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" %>
     <%= javascript_include_tag "application","autocomplete-rails","bootstrap-datepicker","signature" %>
