changes in reporting page

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,6 +1,6 @@
-<div style="font-weight: bold; font-size: 40px;text-align: center; font-family: Times new roman;">Work Order</div><br/>
+<div style="margin-bottom: 10px; font-weight: bold; font-size: 40px;text-align: center; font-family: Times new roman;">Report</div><br/>
 <div id="customer">
-  <span style="font-size :20px; font-weight:bold;">Customer</span><br/>
+  <span style="font-size :18px; font-weight:bold;">Customer</span><br/>
   <% @job.customer_id ? customer = Customer.find(@job.customer_id) : '' %>
   <%= customer ? customer.company_name : '-' %><br/>
   <%= customer ? customer.city : '-' %>,
@@ -8,7 +8,7 @@
   <%= customer ? customer.zip : '-' %>
 </div><br/>
 
-<% if @job.jobsite_id != 0 %>
+<% if @job.jobsite_id.present? && @job.jobsite_id != 0 %>
   <% jobsite = Jobsite.find(@job.jobsite_id) %>
   <div id="jobsites">
     <span style="font-size :20px; font-weight:bold;">Jobsite</span><br/>
@@ -18,93 +18,91 @@
     <%= jobsite.zip %>
   </div>
 <% end %>
-  <br/>
+<br/>
 
-  <div>
-    <% Note.exists?(:notable_id => @notable_id) ? note = Note.where(:note_type => 'Service Request').find_all_by_notable_id(session[:job_id]) : "" %>
-    <% if note.present? %>
-      <p style="font-weight: bold; font-size: 20px;">Notes</p>
-      <table class ="table table-striped">
+<div>
+  <p style="font-weight: bold; font-size: 20px;">Notes</p>
+  <% if current_login.notes.exists?(:notable_id => session[:job_id], :note_type => 'Service Request') %>
+    <% note = Note.where(:note_type => 'Service Request').find_all_by_notable_id(session[:job_id]) %>
+    <table class ="table table-striped">
+      <tr>
+
+        <th>Service Request Notes</th>
+      </tr>
+      <% note.each do |note| %>
         <tr>
-
-          <th>Service Request Notes</th>
+          <td>* <%= note.description %></td>
         </tr>
-        <% note.each do |note| %>
-          <tr>
-            <td>* <%= note.description %></td>
-          </tr>
-        <% end %>
-      </table>
-    <% else %>
-    <% end %>
+      <% end %>
+    </table>
+  <% end %>
 
 
-    <% Note.exists?(:notable_id => @notable_id) ? note = Note.where(:note_type => 'Service Performed').find_all_by_notable_id(session[:job_id]) : "" %>
-    <% if note.present? %>
-      <table class ="table table-striped">
+  <% if  current_login.notes.exists?(:notable_id => session[:job_id], :note_type => 'Service Performed') %>
+    <% note = Note.where(:note_type => 'Service Performed').find_all_by_notable_id(session[:job_id]) %>
+    <table class ="table table-striped">
+      <tr>
+        <th>Service Performed Notes</th>
+      </tr>
+      <% note.each do |note| %>
         <tr>
-          <th>Service Performed Notes</th>
+          <td>* <%= note.description %></td>
         </tr>
-        <% note.each do |note| %>
-          <tr>
-            <td>* <%= note.description %></td>
-          </tr>
-        <% end %>
-      </table>
-    <% else %>
-    <% end %>
-  </div>
-  <br/>
-  <div>
-    <% Inventory.exists?(:job_id => @job.id) ? inventory = Inventory.find_all_by_job_id(@job.id) : "" %>
-    <% if inventory.present? %>
-      <p style="font-weight: bold; font-size: 20px;">Items List</p>
-      <table  class="table table-striped">
-        <tr>
-          <th>Type</th>
-          <th>Item Name</th>
-          <th>Quantity</th>
-          <th>Description</th>
-          <th>Number</th>
-          
-        </tr>
-        <% inventory.each do |inventory| %>
-          <tr>
-            <td><%= inventory.itemtype %></td>
-            <td><%= inventory.name %></td>
-            <td><%= inventory.qty %></td>
-            <td><%= inventory.description %></td>
-            <td><%= inventory.number %></td>
-          </tr>
-        <% end %>
-      </table>
-    <% else %>
-    <% end %>
-  </div>
+      <% end %>
+    </table>
+  <% end %>
+</div>
+<br/>
+<div>
+  <% Inventory.exists?(:job_id => @job.id) ? inventory = Inventory.find_all_by_job_id(@job.id) : "" %>
+  <% if inventory.present? %>
+    <p style="font-weight: bold; font-size: 20px;">Items List</p>
+    <table  class="table table-striped">
+      <tr>
+        <th>Type</th>
+        <th>Item Name</th>
+        <th>Quantity</th>
+        <th>Description</th>
+        <th>Number</th>
 
-  <div>
-    <% Jobtime.exists?(:job_id => @job.id) ? jobtime = Jobtime.find_all_by_job_id(@job.id) : "" %>
-    <% if jobtime.present? %>
-      <p style="font-weight: bold; font-size: 20px;">Time</p>
-      <table  class ="table table-striped">
+      </tr>
+      <% inventory.each do |inventory| %>
         <tr>
-          <th>Type</th>
-          <th>Date</th>
-          <th>Quantity</th>
-          <th>who</th>
-          <th>Service</th>
+          <td><%= inventory.itemtype %></td>
+          <td><%= inventory.name %></td>
+          <td><%= inventory.qty %></td>
+          <td><%= inventory.description %></td>
+          <td><%= inventory.number %></td>
         </tr>
-        <% jobtime.each do |jobtime| %>
-          <tr>
-            <td><%= jobtime.timetype %></td>
-            <td><%= jobtime.start_time %></td>
-            <td><%= jobtime.qty %></td>
-            <td><%= jobtime.user %></td>
-            <td><%= jobtime.service != nil ? Item.find(jobtime.service).name : '' %></td>
-          </tr>
-        <% end %>
-      </table>
-    <% else %>
-    <% end %>
-  </div>  
+      <% end %>
+    </table>
+  <% else %>
+  <% end %>
+</div>
+
+<div>
+  <% Jobtime.exists?(:job_id => @job.id) ? jobtime = Jobtime.find_all_by_job_id(@job.id) : "" %>
+  <% if jobtime.present? %>
+    <p style="font-weight: bold; font-size: 20px;">Time</p>
+    <table  class ="table table-striped">
+      <tr>
+        <th>Type</th>
+        <th>Date</th>
+        <th>Quantity</th>
+        <th>who</th>
+        <th>Service</th>
+      </tr>
+      <% jobtime.each do |jobtime| %>
+        <tr>
+          <td><%= jobtime.timetype %></td>
+          <td><%= jobtime.start_time %></td>
+          <td><%= jobtime.qty %></td>
+          <td><%= jobtime.user %></td>
+          <td><%= jobtime.service != nil ? Item.find(jobtime.service).name : '' %></td>
+        </tr>
+      <% end %>
+    </table>
+  <% else %>
+  <% end %>
+</div>  
 
