--- a/app/views/company_mailer/send_job_details.html.erb
+++ b/app/views/company_mailer/send_job_details.html.erb
@@ -4,21 +4,17 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    Welcome, <%= @company.name %>, Job details are:
-    Job # : <%= @job_number  %>
+    Welcome, <%= @company.name %>, 
+    <span style="font-weight:bold;font-size:20px;float:center">Job details are:</span>
+    
+    Job # : <%= @job.id  %>
     Reference No : <%= @job.reference_no %>
     Due Date : <%= @job.due_date %>
     Class Type : <%= @job.class_type %>
     Assigned To : <%= @job.assigned_to %>
     Status : <%= @job.status %>
-    Contact : <% if !@job.contact_id.nil? %>
-      <%= Contact.find_by_id(@job.contact_id).name %>
-    <% else %>
-      <%= "Email@gmail.com" %>
-    <% end %>
+    Contact : <%= @job.job_contact %>
     Sales Person : <%= @job.sales_person %>
     Summary : <%= @job.summary %>
-    Sub Total : <%= @job.sub_total %>
-    Add Item : <%= @job.add_items %>
   </body>
 </html>
