--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -106,3 +106,35 @@
   <% end %>
 </div>  
 
+<div style="float:right">
+  <%= link_to_function "Print", :class => "btn btn-small btn-primary", :method => :post, :onclick => "print(#{@job.id});"%>
+  <%= link_to_function "Email",:class => "btn btn-small btn-primary", :method => :post, :onclick => "mail(#{@job.id});" %>
+</div>
+
+<script>
+function mail(id) {
+    $.ajax({
+      url: '/reports/'+id+'/send_mail',
+      data: {
+        id: id
+      },
+      type: 'POST',
+      dataType: 'script',
+      success: function(data) {
+      }
+    });
+  }
+  
+  function print(id) {
+    $.ajax({
+        url: '/reports/' +id+'/job_report',
+        data: {
+          id: id
+        },
+        type: 'POST',
+        dataType: 'script',
+        success: function(data) {
+        }
+    });
+  }
+</script>
