--- a/app/views/jobs/job_pdf.html.erb
+++ b/app/views/jobs/job_pdf.html.erb
@@ -1,4 +1,6 @@
-<span style = "color:#0044cc; font-weight: bold;"> Job # : <%= @job_number  %>  </span>
+<span style = "color:#0044cc; font-weight: bold;"> 
+  Job # : <%= @job.id  %>
+</span>
 
 <div class="field">
   <%= label_tag :reference_no %><br />
