--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -43,7 +43,7 @@
           <%= gmaps4rails(@json) %>
         <% else %>
         <span class="alert-error" style="padding:0 5px; width:100%;">
-          You have no jobsites created yet. Please create jobsites to view their locations
+          You have no jobsites to display.
         </span>
         <%= gmaps(:map_options => {:detect_location => true, :center_on_user => true, :auto_zoom => false, :zoom => 12, :auto_adjust => true}, :markers => {:data => @json} ) %>
         <% end %>
