--- a/app/views/jobs/job_pdf.html.erb
+++ b/app/views/jobs/job_pdf.html.erb
@@ -8,57 +8,67 @@
 </div><br/>
 
 <div>
-  <span style="font-size :18px; font-weight:bold;">Job details</span><br/>
-  
-  <table class ="table-hover">
+  <span style="font-size :18px; font-weight:bold; border-bottom: 1px solid #CCC;">Job details</span><br/>
+
+  <table class ="table table-hover">
     <tr>
       <td>Job Number</td>
       <td><%= @job.id %></td>
     </tr>
-    
+
     <tr>
       <td>Reference Number</td>
       <td><%= @job.reference_no %></td>
     </tr>
-    
+
     <tr>
       <td>Due_date</td>
       <td><%= @job.due_date %></td>
     </tr>
-    
+
     <tr>
       <td>Class Type</td>
       <td><%= @job.class_type %></td>
     </tr>
-    
+
     <tr>
       <td>Assigned_To</td>
       <td><%= @job.assigned_to %></td>
     </tr>
-    
+
     <tr>
       <td>Status</td>
       <td><%= @job.status %></td>
     </tr>
-    
+
     <tr>
       <td>Sales_person</td>
       <td><%= @job.sales_person %></td>
     </tr>
-    
-    <tr>
-      <td>contact</td>
-      <td><%= @job.job_contact %></td>
-    </tr>
-    
-  </table>
-</div>
+    <% if @job.contact_id.present? %>
+      <tr>
+        <td>Primary Contact</td>
+        <td><%= current_login.contacts.find(@job.contact_id).name %></td>
+      </tr>
+    <% end %>
 
-<div style="float:right;">
-  <table>
-    <tr><%= @job.name %></tr>
-    <tr>Signature</tr>
-    <tr> <%= image_tag(@job.signature) %></tr>
+      <tr>
+        <td>
+          &nbsp;
+        </td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td><%= image_tag @job.signature, :width => "130px" %></td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>
+          <%= @job.name %>
+        </td>
+      </tr>
+
   </table>
 </div>
 
