--- a/app/views/jobs/_jobs.html.erb
+++ b/app/views/jobs/_jobs.html.erb
@@ -19,7 +19,7 @@
 
   <% elsif params[:controller]=="jobsites" && (params[:action]=="index"  || params[:action]=="edit") %>
 
-    <% else %>
+  <% else %>
     <div id="jobsite123">
       <% @jobsites = Jobsite.find_all_by_customer_id(session[:customer_id]) %>
       Job Site &nbsp; : <%= select_tag :jobsite_id, options_for_select(["None"]+["All"]+@jobsites.map{|job| [job.name,job.id]}, :selected => session[:jobsite_id]), :onchange => "getJobsitesId(this)" %>
@@ -28,8 +28,18 @@
 <%  end %>
 
 
-  <p><span style = "color:#0044cc; font-weight: bold;"> Job # : <%= params[:controller] == "jobs" && params[:action] == "new" ? '' : session[:job_id] %>  </span></p>
+<p><span style = "color:#0044cc; font-weight: bold;"> Job # : <%= params[:controller] == "jobs" && params[:action] == "new" ? '' : session[:job_id] %>  </span></p>
 
-  <div id="display_customer_and_jobsite">
-      <%= render :partial => 'display_customer_and_jobsite' %>
-  </div>
+<div id="display_customer_and_jobsite">
+  <%= render :partial => 'display_customer_and_jobsite' %>
+</div>
+
+
+<script>
+  $(document).ready(function() {
+    $('#form1_actions').change(function() {
+      location.href = $(this).val();
+    });
+  });
+</script>
+
