--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -107,9 +107,10 @@
 </div>  
 
 <div style="width:100%; text-align: right;">
-  <%= link_to_function "Print", "print(#{@job.id});", :class => "btn btn-small btn-primary" %>
+  <%= link_to "print", job_report_report_path(@job.id), :class => "btn btn-small btn-primary"%>
   <%= link_to_function "Email",:class => "btn btn-small btn-primary", :method => :post, :onclick => "mail(#{@job.id});" %>
   <%= link_to_function "Push To Quickbook Invoice","send_to_quickbook(#{params[:id]});", :class => "btn btn-small btn-primary" %>
+  <%= link_to "Back", reports_path(@job.id),:class => "btn btn-small btn-primary" %>
 </div>
 
 <script>
@@ -126,19 +127,4 @@
       }
     });  
   }
-    
-  
-  
-  function print(id) {
-    $.ajax({
-      url: '/reports/' +id+'/job_report',
-      data: {
-        id: id
-      },
-      type: 'POST',
-      dataType: 'script',
-      success: function(data) {
-      }
-    });
-  
 </script>
