--- a/app/views/company_mailer/send_job_report.html.erb
+++ b/app/views/company_mailer/send_job_report.html.erb
@@ -5,114 +5,130 @@
   </head>
   <body>
     
-    Welcome, <%= @company.name %>,
-   <div style="margin-bottom: 10px; font-weight: bold; font-size: 40px;text-align: center; font-family: Times new roman;">Report</div><br/>
-    <div style="float:center;text-align:center; ">
-    <span style="font-size :18px; font-weight:bold;">Customer</span><br/>
-    <%= @job.customer.company_name %><br/>
-    <%= @job.customer.city %>,
-    <%= @job.customer.state  %>,
-    <%= @job.customer.zip %>
-    </div><br/>
+    Welcome, <%= @company.name %>,<br/>
+
+    <div id="company">
+    <%= @job.company.name %><br/>
+    <%= @job.company.email %>
+    </div>
   
-  <% if @job.jobsite_id.present? && @job.jobsite_id != 0 %>
-  <% jobsite = Jobsite.find(@job.jobsite_id) %>
-  <div style ="text-align:center;float:center;">
-    <span style="font-size :20px; font-weight:bold;">Jobsite</span><br/>
-    <%= jobsite.name %><br/>
-    <%= jobsite.city %>,
-    <%= jobsite.state %>,
-    <%= jobsite.zip %>
-  </div>
-  <% end %><br/>
+<div style="float:right;">
+  <span style="font-weight:bold; font-size:18px;float:right;">Invoice</span><br/>
+    <table style="width:300px;border: 1px solid black;border-collapse:collapse;">
+      <tr>
+        <th style="border:1px solid black;">Date</th>
+        <th style="border:1px solid black;">Invoice.No</th>
+      </tr>
+      
+      <tr>
+        <td style="border:1px solid black;"><%= Date.today %></td>
+        <td style="border:1px solid black;"></td>
+      </tr>
+      
+      <tr>
+        <th style="border:1px solid black;"></th>
+        <th style="border:1px solid black;">Due Date</th>
+      </tr>
+      
+      <tr>
+        <td style="border:1px solid black;"></td>
+        <td style="border:1px solid black;"><%= @job.due_date %></td>
+      </tr>
+    </table>
+</div><br/>
+  
+  <div id="billto">
+    <table style="border-collapse:collapse;border: 1px solid black;">
+      <tr><th style="background-color:grey;border:1px solid black;"><span style="font-weight: bold; font-size:14px;text-align:left;">Bill To</span></th></tr>
+      <tr>
+        <td style="border:1px solid black;"><%= @job.customer.company_name %>,<br/>
+            <%= @job.customer.address1 %>,<br/>
+            <%= @job.customer.address2 %>,<br/>
+            <%= @job.customer.city %>,<%= @job.customer.state %>,<%= @job.customer.zip %>
+        </td>
+      </tr>
+    </table>
+  </div><br/>
+  
+
+<div style="float:right;">
+  <table style="border-collapse:collapse;border: 1px solid black;">
+    <tr>
+      <th style="border:1px solid black;">Amount Due</th>
+      <th style="border:1px solid black;">Enclosed</th>
+    </tr>
+    
+    <tr>
+      <td style="border:1px solid black;">&nbsp;</td>
+      <td style="border:1px solid black;">&nbsp;</td>
+    </tr>
+  </table><br/>
+</div><br/><br/>
 
 <div>
-  <% Inventory.exists?(:job_id => @job.id) ? inventory = Inventory.find_all_by_job_id(@job.id) : "" %>
+  <table  style="border-collapse:collapse;border:1px solid;width:100%;">
+    <tr>
+      <th style="background-color:grey;border:1px solid black;">Activity</th>
+      <th style="background-color:grey;border:1px solid black;">Amount</th>
+    </tr>
+  <% Inventory.exists?(:job_id => @job.id) ? inventory = Inventory.find_all_by_job_id(@job.id) : ""  %>
   <% if inventory.present? %>
-    <p style="font-weight: bold; font-size: 20px;">Items List</p>
-    <table  class="table table-striped">
-      <tr>
-        <th>Type</th>
-        <th>Item Name</th>
-        <th>Quantity</th>
-        <th>Description</th>
-        <th>Number</th>
-
-      </tr>
-      <% inventory.each do |inventory| %>
-        <tr>
-          <td><%= inventory.itemtype %></td>
-          <td><%= inventory.name %></td>
-          <td><%= inventory.qty %></td>
-          <td><%= inventory.description %></td>
-          <td><%= inventory.number %></td>
-        </tr>
-      <% end %>
-    </table>
+    <% inventory.each do |inventory| %>
+    <tr>
+      <td style="border:1px solid black;"><%= inventory.description %></td>
+      <td style="border:1px solid black;"><%= inventory.unit_price.to_f * inventory.qty.to_f %></td>
+    </tr>
+    <% end %>
+    <%  else %>
+  <% end %>
+    
+    <% Jobtime.exists?(:job_id => @job.id) ? jobtime = Jobtime.find_all_by_job_id(@job.id) : "" %>
+      <% if jobtime.present? %>
+    
+    <% jobtime.each do |jobtime| %>
+    <tr>
+      <td style="border:1px solid black;"><%= jobtime.timetype %></td>
+      <td style="border:1px solid black;"><%= jobtime.price %></td>
+    </tr>
+    <% end %>
   <% else %>
   <% end %>
+  </table><br/>
 </div>
 
 <div>
-  <% Jobtime.exists?(:job_id => @job.id) ? jobtime = Jobtime.find_all_by_job_id(@job.id) : "" %>
-  <% if jobtime.present? %>
-    <p style="font-weight: bold; font-size: 20px;">Time</p>
-    <table  class ="table table-striped">
-      <tr>
-        <th>Type</th>
-        <th>Date</th>
-        <th>Quantity</th>
-        <th>who</th>
-        <th>Service</th>
-      </tr>
-      <% jobtime.each do |jobtime| %>
-        <tr>
-          <td><%= jobtime.timetype %></td>
-          <td><%= jobtime.start_time %></td>
-          <td><%= jobtime.qty %></td>
-          <td><%= jobtime.user %></td>
-          <td><%= jobtime.service != nil ? Item.find(jobtime.service).name : '' %></td>
-        </tr>
-      <% end %>
-    </table>
-  <% else %>
-  <% end %>
-</div>  
-  
-  <div>
   <% Note.exists?(:notable_id => @job.id) ? note = Note.where(:note_type => 'Service Request').find_all_by_notable_id(@job.id) : "" %>
   <% if note.present? %>
   <p style="font-weight: bold; font-size: 20px;">Notes</p>
-    <table class ="table table-striped">
+    <table style="width:300px;border-collapse:collapse;border: 1px solid black;">
       <tr>
-
-        <th>Service Request Notes</th>
+        <th style="border:1px solid black;">Service Request Notes</th>
       </tr>
       <% note.each do |note| %>
         <tr>
-          <td>* <%= note.description %></td>
+          <td style="border:1px solid black;">* <%= note.description %></td>
+        </tr>
+      <% end %>
+    </table><br/>
+  <% else %>
+  <% end %>
+  
+    <% Note.exists?(:notable_id => @job.id) ? note = Note.where(:note_type => 'Service Request').find_all_by_notable_id(@job.id) : "" %>
+    <% if note.present? %>
+    <table style="width:300px;border-collapse:collapse;border: 1px solid black;">
+      <tr>
+        <th style="border:1px solid black;">Service Performed Notes</th>
+      </tr>
+        <% note.each do |note| %>
+        <tr>
+          <td style="border:1px solid black;">* <%= note.description %></td>
         </tr>
       <% end %>
     </table>
   <% else %>
   <% end %>
-
-<% Note.exists?(:notable_id => @job.id) ? note = Note.where(:note_type => 'Service Request').find_all_by_notable_id(@job.id) : "" %>
-  <% if note.present? %>
-    <table class ="table table-striped">
-      <tr>
-        <th>Service Performed Notes</th>
-      </tr>
-      <% note.each do |note| %>
-        <tr>
-          <td>* <%= note.description %></td>
-        </tr>
-      <% end %>
-    </table>
-  <% else %>
-  <% end %>
+  </table>
 </div>
-<br/>
-    
   </body>
 </html>
+
