--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -88,7 +88,7 @@
     series: [{
       pointInterval: <%= 1.day * 1000 %>,
       pointStart: <%= 3.weeks.ago.at_midnight.to_i * 1000 %>,
-      data: <%=  (3.weeks.ago.to_date..Date.today).map { |date| Job.open_jobs(date).to_f}.inspect %>
+      data: <%=  (3.weeks.ago.to_date..Date.today).map { |date| Job.open_jobs(date)} %>
     }]
   });
 });
