--- a/app/views/customs/_replace_dropdown.html.erb
+++ b/app/views/customs/_replace_dropdown.html.erb
@@ -1,7 +1,7 @@
 <% @value = DropdownValue.find_by_custom_id_and_company_id(custom.id, current_login.id) %>
 
 <% if custom.field == "Text Box" %>
-  <%= text_field_tag "textField",{}, :value => @value ? @value.drop_value : "", :onfocus => "javascript:show_edit_form('#{custom.id}','#{@value.id}')" %>
+  <%= text_field_tag "textField",{}, :value => @value ? @value.drop_value : "", :onfocus => "javascript:show_edit_form('#{custom.id}','#{@value.id}', '#{params[:type]}')" %>
 
 <% elsif custom.field == "Dropdown List" %>
   <% dropvalue = DropdownValue.find_by_custom_id_and_company_id(custom.id, current_login.id).drop_value.split(',').each %>
@@ -9,12 +9,12 @@
   <%= link_to_function "Edit Values", "update_dropdown_values('#{custom.id}')", :class => "btn btn-mini btn-primary", :style => "color:white" %>
 
 <% elsif custom.field == "Calendar" %>
-  <%= text_field_tag "calendar", nil, :value => @value ? @value.drop_value : "",:onfocus => "javascript:show_edit_form('#{custom.id}','#{@value.id}')", :class => 'data' %>&nbsp;
+  <%= text_field_tag "calendar", nil, :value => @value ? @value.drop_value : "",:onfocus => "javascript:show_edit_form('#{custom.id}','#{@value.id}', '#{params[:type]}')", :class => 'data' %>&nbsp;
   <%= image_tag "calendar.png", :style => "width: 32px; height: 32px; cursor:pointer;", :id => "calendar_icon", :class => "datepicker"%>
 
 <% elsif custom.field == "Legend" %>
   <pre
-    <% unless params[:controller]=="customs" && (params[:action]=="index") %>onclick="javascript:show_edit_form(<%= custom.id %>, <%= @value.id %>)"<% end %> >
+    <% unless params[:controller]=="customs" && (params[:action]=="index") %>onclick="javascript:show_edit_form(<%= custom.id %>, <%= @value.id %>, <%= params[:type] %>)"<% end %> >
       <%= @value.drop_value %>
   </pre>
   <br/>
@@ -54,7 +54,8 @@
     $.ajax({
       url: "/customs/edit_dropdown",
       data: {
-        cus_id: id
+        cus_id: id,
+        tab:<%= params[:tab] %>
       },
       type: 'GET',
       dataType: 'script',
@@ -73,12 +74,14 @@
     });
   }
 
-  function show_edit_form(custom_id,value_id){
+  function show_edit_form(custom_id,value_id, tb_type){
     $.ajax({
       url:'/customs/get_dropdown_values',
       data:{
         custom_id:custom_id,
-        dropdown_id:value_id
+        dropdown_id:value_id,
+        tab:<%= params[:tab] %>,
+        type:tb_type
       },
       type:'GET',
       dataType:'script',
