--- a/app/views/settings/accounting.html.erb
+++ b/app/views/settings/accounting.html.erb
@@ -17,18 +17,19 @@
   }
 </style>
 <%= render :partial => "layouts/tabs_for_settings" %>
-<% if !current_login.access_token.present? && !current_login.access_secret.present? && !current_login.realm_id.present? %>
   <!-- somewhere in your document include the Javascript -->
   <script type="text/javascript" src="https://appcenter.intuit.com/Content/IA/intuit.ipp.anywhere.js"></script>
 
   <!-- configure the Intuit object: 'grantUrl' is a URL in your application which kicks off the flow, see below -->
   <script>
-    intuit.ipp.anywhere.setup({menuProxy: '/path/to/blue-dot', grantUrl: "<%= authenticate_settings_url %>"});
+    intuit.ipp.anywhere.setup({menuProxy: '<%= bluedot_settings_url %>', grantUrl: "<%= authenticate_settings_url %>"});
   </script>
-
+  
+<% if !current_login.access_token.present? && !current_login.access_secret.present? && !current_login.realm_id.present? %>
   <!-- this will display a button that the user clicks to start the flow -->
   <ipp:connectToIntuit></ipp:connectToIntuit>
 <% else %>
+  <ipp:blueDot></ipp:blueDot>
   <div id="items">
     <%= button_to "Disconnect from Quickbooks", {:controller => "settings", :action => "dis_quickbooks"} , :class => "btn btn-small btn-primary"%>
   </div>
